# spot_kokkos_bundle

./: .gitmodules  CMakeLists.txt  Makefile  spot-bundle.cpp
