project(spot-bundle)
cmake_minimum_required(VERSION 3.12)
set(WITH_MPI ON CACHE BOOL "")
set(WITH_KOKKOS ON CACHE BOOL "")
set(WITH_KOKKOS_PROFILING ON CACHE BOOL "")
set(WITH_ADIAK ON CACHE BOOL "")
add_subdirectory(tpl/caliper)
find_package(adiak)

#get_property(ADIAK_INC DIRECTORY tpl/adiak PROPERTY INCLUDE_DIRECTORIES)
get_property(CALI_INC DIRECTORY tpl/caliper PROPERTY INCLUDE_DIRECTORIES)

#include_directories(${ADIAK_INC})
include_directories(${CALI_INC})
add_library(spot-bundle SHARED spot-bundle.cpp)
target_link_libraries(spot-bundle caliper)
target_link_libraries(spot-bundle adiak)
target_link_libraries(spot-bundle dl)
add_executable(test_exe test.cpp)
target_link_libraries(test_exe spot-bundle)
